--- a/index.html
+++ b/index.html
@@ -1,249 +1,320 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ME Construction - Revêtement Extérieur</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #0a0f1c;
-      color: #fff;
-      overflow-x: hidden;
-    }
-    header {
-      background: linear-gradient(135deg, #1e3c72, #2a5298);
-      text-align: center;
-      padding: 80px 20px;
-      position: relative;
-      overflow: hidden;
-      animation: fadeIn 2s ease-in-out;
-    }
-    /* Image de fond dans header */
-    header::before {
-      content: "";
-      position: absolute;
-      top: 15px; /* un peu plus bas */
-      left: 50%;
-      transform: translateX(-50%);
-      width: 100%;
-      max-width: 600px;
-      height: 200px;
-      background: url('img/back.jpg') no-repeat center;
-      background-size: cover;
-      opacity: 0.15;
-      pointer-events: none;
-      z-index: 0;
-      border-radius: 12px;
-    }
-    header h1, header p {
-      position: relative;
-      z-index: 1;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>ME Construction - Revêtement Extérieur</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+<style>
+  * {
+    margin: 0; padding: 0; box-sizing: border-box;
+  }
+  body {
+    font-family: 'Poppins', sans-serif;
+    background: #0a0f1c;
+    color: #fff;
+    overflow-x: hidden;
+  }
+  header {
+    position: relative;
+    text-align: center;
+    padding: 100px 20px 120px;
+    background: linear-gradient(135deg, #1e3c72, #2a5298);
+    overflow: hidden;
+  }
+  /* Image de fond dans header */
+  header::before {
+    content: "";
+    position: absolute;
+    top: 60px; /* un peu plus vers le bas */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    max-width: 600px;
+    height: 200px;
+    background: url('img/back.jpg') no-repeat center;
+    background-size: cover;
+    opacity: 0.15;
+    pointer-events: none;
+    z-index: 0;
+    border-radius: 12px;
+  }
+  header h1, header p {
+    position: relative;
+    z-index: 1;
+  }
+  nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    background: #111831;
+    padding: 15px 10px;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+  }
+  nav a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    transition: color 0.3s;
+  }
+  nav a:hover {
+    color: #1abc9c;
+  }
+  .section {
+    padding: 60px 20px;
+    max-width: 1200px;
+    margin: auto;
+  }
+  .services {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 30px;
+    margin-top: 40px;
+  }
+  .card {
+    background: #1f2b45;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+  }
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 30px;
+    margin-top: 40px;
+  }
+  .gallery img {
+    width: 100%;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+    cursor: zoom-in;
+    transition: transform 0.3s ease;
+  }
+  .gallery img:hover {
+    transform: scale(1.05);
+  }
+  #avis {
+    background: #151e35;
+    padding-bottom: 40px;
+  }
+  .avis-marquee {
+    max-width: 700px;
+    margin: 0 auto;
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
+  .avis-item {
+    background: #1f2b45;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    display: flex;
+    gap: 15px;
+    align-items: flex-start;
+  }
+  .avis-item img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+    flex-shrink: 0;
+    cursor: zoom-in;
+    box-shadow: 0 0 8px rgba(0,0,0,0.5);
+  }
+  .avis-content {
+    flex-grow: 1;
+  }
+  .stars {
+    color: gold;
+    margin-top: 10px;
+    font-size: 1.1rem;
+  }
+  .avis-item small {
+    display: block;
+    margin-top: 8px;
+    font-style: italic;
+    color: #ccc;
+  }
+  .plus-photo {
+    text-align: center;
+    margin-top: 25px;
+    color: #1abc9c;
+    font-weight: 600;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+  }
+  .plus-photo img {
+    width: 24px;
+    height: 24px;
+    filter: invert(61%) sepia(71%) saturate(401%) hue-rotate(133deg) brightness(90%) contrast(87%);
+    transition: filter 0.3s;
+  }
+  .plus-photo:hover img {
+    filter: invert(33%) sepia(88%) saturate(583%) hue-rotate(146deg) brightness(102%) contrast(105%);
+  }
+  footer {
+    background: #111831;
+    color: #aaa;
+    text-align: center;
+    padding: 25px;
+    margin-top: 50px;
+    font-size: 0.95rem;
+  }
+  /* Zoom modal */
+  #zoomModal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0; top: 0;
+    width: 100vw; height: 100vh;
+    background: rgba(0,0,0,0.8);
+    align-items: center;
+    justify-content: center;
+    cursor: zoom-out;
+  }
+  #zoomModal img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 12px;
+  }
+  /* Responsive */
+  @media (max-width: 600px) {
     nav {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      background: #111831;
-      padding: 15px 10px;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s;
-    }
-    nav a:hover {
-      color: #1abc9c;
-    }
-    .section {
-      padding: 60px 20px;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .services {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      margin-top: 40px;
-    }
-    .card {
-      background: #1f2b45;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
-      opacity: 0;
-      transform: translateY(50px);
-      transition: opacity 0.6s ease, transform 0.6s ease;
+      flex-direction: column;
+      gap: 10px;
     }
     .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      margin-top: 40px;
-    }
-    .gallery img {
-      width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.4);
-      cursor: zoom-in;
-      opacity: 0;
-      transform: translateY(50px);
-      transition: opacity 0.6s ease, transform 0.6s ease;
-    }
-    footer {
-      background: #111831;
-      color: #aaa;
-      text-align: center;
-      padding: 25px;
-      margin-top: 50px;
-    }
-    #avis {
-      background: #151e35;
-      overflow: hidden;
-      position: relative;
-      padding-bottom: 40px;
-    }
-    .avis-marquee {
-      display: flex;
-      flex-direction: column;
-      gap: 25px;
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 20px 0;
-      /* supprimé animation pour colonne */
+      grid-template-columns: 1fr;
     }
     .avis-item {
-      background: #1f2b45;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-      display: flex;
-      gap: 15px;
-      align-items: flex-start;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
     }
     .avis-item img {
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      object-fit: cover;
-      flex-shrink: 0;
-      cursor: zoom-in;
-      box-shadow: 0 0 8px rgba(0,0,0,0.5);
+      margin-bottom: 12px;
     }
     .avis-content {
-      flex-grow: 1;
+      width: 100%;
     }
-    .stars {
-      color: gold;
-      margin-top: 10px;
-      font-size: 1.1rem;
-    }
-    .avis-item small {
-      display: block;
-      margin-top: 8px;
-      font-style: italic;
-      color: #ccc;
-    }
-    .plus-photo {
-      text-align: center;
-      margin-top: 25px;
-      color: #1abc9c;
-      font-weight: 600;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-    }
-    .plus-photo img {
-      width: 24px;
-      height: 24px;
-      filter: invert(61%) sepia(71%) saturate(401%) hue-rotate(133deg) brightness(90%) contrast(87%);
-      transition: filter 0.3s;
-    }
-    .plus-photo:hover img {
-      filter: invert(33%) sepia(88%) saturate(583%) hue-rotate(146deg) brightness(102%) contrast(105%);
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
-        gap: 10px;
-      }
-      .gallery {
-        grid-template-columns: 1fr;
-      }
-      #avis {
-        padding-bottom: 60px;
-      }
-      .avis-item {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-      .avis-item img {
-        margin-bottom: 12px;
-      }
-      .avis-content {
-        width: 100%;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
-  <header>
-    <h1>ME Construction</h1>
-    <p>Transformez vos extérieurs avec un style futuriste et une finition parfaite</p>
-  </header>
 
-  <nav>
-    <a href="#services">Services</a>
-    <a href="#realisations">Réalisations</a>
-    <a href="#avis">Avis</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<header>
+  <h1>ME Construction</h1>
+  <p>Transformez vos extérieurs avec un style futuriste et une finition parfaite</p>
+</header>
 
-  <section class="section" id="services">
-    <h2>Nos Services</h2>
-    <div class="services">
-      <div class="card"> <h3>Pose de carrelage extérieur</h3><p>Installation professionnelle de dalles sur plots, designs personnalisés pour vos terrasses et allées.</p></div>
-      <div class="card"> <h3>Terrasses en bois</h3><p>Création de terrasses élégantes et durables en bois naturel ou composite.</p></div>
-      <div class="card"> <h3>Rénovation & Entretien</h3><p>Remise à neuf de vos revêtements extérieurs et conseils pour l'entretien durable.</p></div>
+<nav>
+  <a href="#services">Services</a>
+  <a href="#realisations">Réalisations</a>
+  <a href="#avis">Avis</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section class="section" id="services">
+  <h2>Nos Services</h2>
+  <div class="services">
+    <div class="card">
+      <h3>Pose de carrelage extérieur</h3>
+      <p>Installation professionnelle de dalles sur plots, designs personnalisés pour vos terrasses et allées.</p>
     </div>
-  </section>
-
-  <section class="section" id="realisations">
-    <h2>Réalisations</h2>
-    <div class="gallery">
-      <img src="img/bois.jpg" alt="Projet Bois" />
-      <img src="img/house.jpg" alt="Projet Maison" />
-      <img src="img/terasse.jpg" alt="Projet Terrasse" />
+    <div class="card">
+      <h3>Terrasses en bois</h3>
+      <p>Création de terrasses élégantes et durables en bois naturel ou composite.</p>
     </div>
-    <div class="plus-photo" onclick="window.open('https://www.facebook.com/people/Me-construction/100066785978290/', '_blank')">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook ME Construction" />
-      Pour plus de photos
+    <div class="card">
+      <h3>Rénovation & Entretien</h3>
+      <p>Remise à neuf de vos revêtements extérieurs et conseils pour l'entretien durable.</p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section class="section" id="avis">
-    <h2>Avis Clients</h2>
-    <div class="avis-marquee">
-      <div class="avis-item">
-        <img src="img/clientAlex.webp" alt="Alex">
-        <div class="avis-content">
-          <p>Travail précis et de qualité, ponctuel, à l'écoute du client, aimable,
-            
+<section class="section" id="realisations">
+  <h2>Réalisations</h2>
+  <div class="gallery">
+    <img src="img/bois.jpg" alt="Projet Bois" />
+    <img src="img/house.jpg" alt="Projet Maison" />
+    <img src="img/terasse.jpg" alt="Projet Terrasse" />
+  </div>
+  <div class="plus-photo" onclick="window.open('https://www.facebook.com/people/Me-construction/100066785978290/', '_blank')">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook ME Construction" />
+    Pour plus de photos
+  </div>
+</section>
+
+<section class="section" id="avis">
+  <h2>Avis Clients</h2>
+  <div class="avis-marquee">
+
+    <div class="avis-item">
+      <img src="img/clientAlex.webp" alt="Alex" class="zoomable" />
+      <div class="avis-content">
+        <p>Travail précis et de qualité, ponctuel, à l'écoute du client, aimable, très professionnel.</p>
+        <div class="stars">★★★★★</div>
+        <small>Alex</small>
+      </div>
+    </div>
+
+    <div class="avis-item">
+      <div class="avis-content">
+        <p>Une équipe sérieuse, travail soigné et respect des délais. Très satisfait du résultat !</p>
+        <div class="stars">★★★★★</div>
+        <small>Marie D.</small>
+      </div>
+    </div>
+
+    <div class="avis-item">
+      <div class="avis-content">
+        <p>Excellent rapport qualité-prix. Je recommande ME Construction pour vos travaux extérieurs.</p>
+        <div class="stars">★★★★★</div>
+        <small>Julien P.</small>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<footer id="contact">
+  <p>Téléphone : <a href="tel:+33676553748" style="color:#1abc9c;">06 76 55 37 48</a></p>
+  <p>Email : <a href="mailto:Me.construction@outlook.fr" style="color:#1abc9c;">Me.construction@outlook.fr</a></p>
+</footer>
+
+<!-- Modal zoom image -->
+<div id="zoomModal">
+  <img src="" alt="Zoom Image" />
+</div>
+
+<script>
+  // Zoom images au clic
+  const zoomModal = document.getElementById('zoomModal');
+  const zoomedImg = zoomModal.querySelector('img');
+
+  document.querySelectorAll('.zoomable, .gallery img').forEach(img => {
+    img.style.cursor = 'zoom-in';
+    img.addEventListener('click', () => {
+      zoomedImg.src = img.src;
+      zoomModal.style.display = 'flex';
+      document.body.style.overflow = 'hidden';
+    });
+  });
+
+  zoomModal.addEventListener('click', () => {
+    zoomModal.style.display = 'none';
+    zoomedImg.src = '';
+    document.body.style.overflow = '';
+  });
+</script>
+
+</body>
+</html>
