--- a/index.html
+++ b/index.html
@@ -260,25 +260,28 @@
   <h2>Avis Clients</h2>
   <div class="avis-marquee">
 
+    <!-- Avis Alex -->
     <div class="avis-item">
-      <img src="img/clientAlex.webp" alt="Alexandre Oliveira" class="zoomable" />
+      <img src="img/clientAlex.webp" alt="Photo d'Alex" class="zoomable" />
       <div class="avis-content">
+        <strong>Alex</strong>
         <p>Réalisation de notre terrasse de 120m2 pose de dalles 30x120 sur plots. Artisan très minutieux et très soucieux de la satisfaction client. Nous sommes très satisfaits du rendu de la terrasse. Nous recommandons cet artisan pour la pose de terrasse.</p>
         <div class="stars">★★★★★</div>
-        <small>Alexandre Oliveira</small>
       </div>
     </div>
 
+    <!-- Avis Florian Moine -->
     <div class="avis-item">
       <div class="avis-content">
-        <p>Projet d’une terrasse en dalles carrelage de 42m². Me Construction a été à l’écoute de notre projet ! Et nous a conseillé sur le type de dalles à acheter avec une super promotion en magasin ! Livrée une semaine plus tard… Me Construction a parfaitement réalisé cette terrasse dans un temps record ! Il nous aurait fallu sûrement le double d’heures de travail pour réaliser cette prestation… Et sûrement pas au niveau de rendu de ME CONSTRUCTION ! Nous sommes vraiment ravis de cet ouvrage :) Prêt pour profiter des premiers rayons de soleil. MERCI ME CONSTRUCTION !!!! ALLEZ Y LES YEUX FERMÉS…</p>
+        <strong>Florian Moine</strong>
+        <p>Projet d’une terrasse en dalles carrelage de 42m². Me Construction a été à l’écoute de notre projet ! Et nous a conseillé sur le type de dalles à acheter avec une super promotion en magasin ! Livrée une semaine plus tard… Me Construction a parfaitement réalisé cette terrasse dans un temps record ! Il nous aurait fallu sûrement le double d’heure de travail pour réaliser cette prestation…. Et sûrement pas au niveau de rendu de ME CONSTRUCTION ! Nous sommes vraiment ravis de cette ouvrage :) Prêt pour profiter des premiers rayons de soleil. MERCI ME CONSTRUCTION !!!! ALLEZ-Y LES YEUX FERMÉS…</p>
         <div class="stars">★★★★★</div>
-        <small>Florian Moine</small>
       </div>
     </div>
 
+    <!-- Autres avis ici sans photo, pareil -->
+
   </div>
-</section>
 
 <footer id="contact">
   <p>Téléphone : <a href="tel:+33676553748">06 76 55 37 48</a></p>
